--- a/install
+++ b/install
@@ -18,34 +18,39 @@ else
 fi
 
 # nvim
-if [[ -f 'nvim' ]]; then
-  bold 'nvim.appimage already installed'
+nvim_file="nvim.appimage"
+nvim_url='https://github.com/neovim/neovim/releases/download/v0.4.4/nvim.appimage'
+if [[ -f "$nvim_file" ]]; then
+  bold "$nvim_file already installed"
 else
-  bold 'downloading nvim.appimage'
-  wget -O 'nvim' 'https://github.com/neovim/neovim/releases/download/v0.4.4/nvim.appimage'
-  chmod u+x 'nvim'
+  bold "downloading $nvim_file"
+  wget -O "$nvim_file" "$nvim_url"
+  chmod u+x "$nvim_file"
 fi
 
 # tmux
-if [[ -f 'tmux' ]]; then
-  bold 'tmux.appimage already installed'
+tmux_file="tmux.appimage"
+tmux_url='https://github.com/nelsonenzo/tmux-appimage/releases/download/tmux3.1b/tmux-3.1b-x86_64.AppImage'
+if [[ -f "$tmux_file" ]]; then
+  bold "$tmux_file already installed"
 else
-  bold 'downloading tmux.appimage'
-  wget -O 'tmux' 'https://github.com/nelsonenzo/tmux-appimage/releases/download/tmux3.1b/tmux-3.1b-x86_64.AppImage'
-  chmod u+x 'tmux'
+  bold "downloading $tmux_file"
+  wget -O "$tmux_file" "$tmux_url"
+  chmod u+x "$tmux_file"
 fi
 
-# nnn
+# nnn 
+nnn_url='https://github.com/jarun/nnn/releases/download/v3.5/nnn-static-3.5.x86_64.tar.gz'
 if [[ -f 'nnn' ]]; then
   bold 'nnn already installed'
 else
   bold 'downloading nnn'
-  wget -O '/tmp/nnn.tar.gz' 'https://github.com/jarun/nnn/releases/download/v3.5/nnn-static-3.5.x86_64.tar.gz'
+  wget -O '/tmp/nnn.tar.gz' "$nnn_url"
   tar -xvf '/tmp/nnn.tar.gz'
-  chmod u+x 'nnn-static'
+  chmod u+x 'nnn-static' "$nnn_url"
   mv 'nnn-static' 'nnn'
 fi
 
 # root stuff, if possible
-sudo apt install -y ripgrep
+sudo apt install -y ripgrep fd-find
 sudo ln -sf ~/.mike/xkb_symbols /usr/share/X11/xkb/symbols/mike
